manifests/cloud-cart.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: catalog
  labels:
    app: catalog
    service: catalog
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: catalog
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-v1
  labels:
    app: frontend-v1
    service: frontend-v1
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: frontend-v1
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-v2
  labels:
    app: frontend-v2
    service: frontend-v2
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: frontend-v2
---
apiVersion: v1
kind: Service
metadata:
  name: orders
  labels:
    app: orders
    service: orders
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: orders
---
apiVersion: v1
kind: Service
metadata:
  name: order-history
  labels:
    app: order-history
    service: order-history
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: order-history
---
apiVersion: v1
kind: Service
metadata:
  name: payments
  labels:
    app: payments
    service: payments
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: payments
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
    service: rabbitmq
spec:
  ports:
  - port: 5672
    name: tcp-rabbit
  selector:
    app: rabbitmq
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog
  labels:
    app: catalog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog
  template:
    metadata:
      labels:
        app: catalog
    spec:
      containers:
      - name: catalog
        image: ghcr.io/btjimerson/cloud-cart-catalog:0.1.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-v1
  labels:
    app: frontend-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-v1
  template:
    metadata:
      labels:
        app: frontend-v1
    spec:
      containers:
      - name: frontend-v1
        image: ghcr.io/btjimerson/cloud-cart-frontend:0.1.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-v2
  labels:
    app: frontend-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-v2
  template:
    metadata:
      labels:
        app: frontend-v2
    spec:
      containers:
      - name: frontend-v2
        image: ghcr.io/btjimerson/cloud-cart-frontend:0.1.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loadgenerator
spec:
  selector:
    matchLabels:
      app: loadgenerator
  replicas: 1
  template:
    metadata:
      labels:
        app: loadgenerator
      annotations:
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
    spec:
      restartPolicy: Always
      containers:
      - name: loadgenerator
        image: ghcr.io/btjimerson/cloud-cart-loadgenerator:0.1.1
        imagePullPolicy: 
        resources:
          requests:
            cpu: 300m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders
  labels:
    app: orders
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
      - name: orders
        image: ghcr.io/btjimerson/cloud-cart-orders:0.1.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-history
  labels:
    app: order-history
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-history
  template:
    metadata:
      labels:
        app: order-history
    spec:
      containers:
      - name: order-history
        image: ghcr.io/btjimerson/cloud-cart-order-history:0.1.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments
  labels:
    app: payments
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments
    spec:
      containers:
      - name: payments
        image: ghcr.io/btjimerson/cloud-cart-payments:0.1.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3
        imagePullPolicy: 
        ports:
        - containerPort: 5672
---
