manifests/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cloud-cart
  namespace: cloud-cart
  labels:
    app: cloud-cart
spec:
  parentRefs:
    - name: cloud-cart-gateway
      namespace: kgateway-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /cart
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: frontend-v1
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /catalog
        - path:
            type: PathPrefix
            value: /item
        - path:
            type: PathPrefix
            value: /checkout
        - path:
            type: PathPrefix
            value: /order
        - path:
            type: PathPrefix
            value: /order-history
        - path:
            type: PathPrefix
            value: /js
        - path:
            type: PathPrefix
            value: /css
        - path:
            type: PathPrefix
            value: /images
        - path:
            type: PathPrefix
            value: /api
        - path:
            type: PathPrefix
            value: /actuator
      backendRefs:
        - name: frontend-v1
          port: 8080
